
Fix for compiling module with Asterisk 1.8. This fix is compatible with prior
Asterisk releases 1.4 and 1.6.

Deleted the RCS identifiers at the top of the module files because we're using
subversion. Deleted the TODO file since it's not being used to track future
enhancements. Fixed the Makefile clean target so that the module shared object
gets deleted with the other object files and deleted the distclean target.
Fixed the Makefile so that the module is compiled whenever an include file is
modified.

Changed the frame mixing algorithm to reduce calls to the buffer mixing
routine: First, the new algorithm loops over the input frames to create a mix
buffer for listeners. Then, speaker buffers are created by subtracting their
voice from the listener buffer. As a result, frame mixing is O(n) with respect
to invocations of the mix buffer routine which should be a considerable
improvement.

Changed the frame queueing routines for both speakers and listeners so they are
more efficient.  Specifically, the sequential search through the send frame
list to find the frame to queue to the input member is replaced with a fetch of
the appropriate frame pointer from either the member control block for speakers
or the conference control block for listeners. These pointers are steup when
the spoken frames are processed in the conference thread loop. 

Changed the frame mixing routines to use SIMD instructions for processing
samples which should be much more efficient than processing the samples
serially.

Fixed some compiler warnings by changing the Makefile to set the asterisk
version in a preprocessor flag and changed the source so that code is generated
for the for the appropriate asterisk version. The asterisk version can by
setting the new source directory variable on the command line: make
ASTERISK_SRC_DIRECTORY or by modifying the variable in the Makefile.

Changed the Makefile so that compiler optimizations are enabled by default.